static/styles/zulip.css
/* ... */
.summary_row .message_header{
    padding:        5px 0px 4px 5px;
}

.summary_row .message_header {
    border-radius: 0;
}

.bookend_tr + .summary_row .message_header {
    border-top-right-radius: 3px;
}

.bookend_tr + .summary_row .summary_colorblock {
    border-top-left-radius: 3px;
}

.summary_row.last_message .message_header {
    border-bottom-right-radius: 3px;
    box-shadow: inset 0px 2px 1px -2px #333, inset -2px 0px 1px -2px #333, inset 0px -2px 1px -2px #333;
}

.summary_row.last_message .summary_colorblock {
    border-bottom-left-radius: 3px;
}

.message_header .icon-vector-narrow {
    font-size: 0.6em;
    position: relative;
    top: -1px;
}

.copy-paste-text {
    /* Hide the text that we want copy paste to capture */
    position: absolute;
    text-indent: -99999px;
    float: left;
    width: 0px;
}

.message_header_colorblock {
    border-radius: 3px 0px 0px 0px;
    /* box-shadow: 0px 2px 3px #ccc; */
    box-shadow: inset 0px 2px 1px -2px #333, inset 2px 0px 1px -2px #333 !important;
}

.summary_row_private_message .summary_colorblock {
    background: #000;
}

/*
We can't collapse the floating recipient bar yet, so this is
just a temporary hack.
*/
.floating_recipient .icon-vector-collapse-alt {
    display: none;
}

.floating_recipient .message_header {
    box-shadow: inset 0px 2px 1px -2px #333, inset -2px 0px 1px -2px #333 !important;
}

.floating_recipient .message_header_colorblock {
    box-shadow: inset 0px 2px 1px -2px #333, inset 2px 0px 1px -2px #333 !important;
}

.compose_table .message_header_colorblock, .compose_table .message_header {
    box-shadow: none;
    background: none;
}

.compose_table .message_header_colorblock {
    border-radius: 3px 0px 0px 3px;
    border-bottom: 0px;
}

.compose_table .message_header_colorblock.message_header_private_message {
    border-radius: 3px 0px 0px 3px;
    border-bottom: 0px;
}

.compose_table .message_header_colorblock.message_header_private_message {
    background: #444;
}

.compose_table .right_part {
    padding: 0px;
}

.compose_table .right_part .icon-vector-narrow {
    font-size: 0.6em;
    position: relative;
}

.compose_table .compose_checkbox_label {
    display: inline-block;
}

.compose_table .pm_recipient {
    position: relative;
    margin-right: 30px;
}

.compose_table .pm_recipient .you_text {
    position: absolute;
    left: 4px;
    top: 2px;
}

.compose_table .pm_recipient #private_message_recipient {
    padding-left: 4em;
    border-left: none;
    border-radius: 0px 3px 3px 0px;
}

.compose_table #private-message .right_part {
    padding-right: 4em;
}

.compose_table #compose-lock-icon {
    position: relative;
    width: 0px;
}

.compose_table #compose-lock-icon i {
    position: absolute;
    left: 5px;
    top: 3px;
}

.messagebox-bottom {
    height: 3px;
    background-color: #fff;
    border-radius: 0px 0px 3px 0px;
    /* box-shadow: 0px 2px 2px -1px #ccc; */
    border: 1px solid #c1dbd5;
    border-top: none;
    border-left: none;
}

.messagebox-bottom-colorblock {
    border-radius: 0px 0px 0px 3px;
    /* box-shadow: 0px 2px 2px -1px #ccc; */
    border: 1px solid #c1dbd5;
    border-top: none;
    border-right: none;
}


.compose_table .message_header.message_header_private_message,
.message_header_private_message {
    background-image: none;
    background-color: #444444;
}

.compose_table .message_header {
    background: none;
    background-color: #ececec;
    border: none;
    border-radius: 0px;
    box-shadow: none !important;
}

.pointer_icon {
    width: 100%;
    text-align: center;
    display: none;
    color: #000;
}


/* Round edges on the bottom of each message --
   a necessary evil in the world of tables */
.last_message .messagebox {
    height: 3px;
    border-radius: 0px 0px 3px 0px;
    border: none;
    box-shadow: inset -2px 0px 1px -2px #333, inset 0px -2px 1px -2px #333;
}

.last_message .messagebox_colorblock {
    border-radius: 0px 0px 0px 3px;
    border: none;
    box-shadow: inset 2px 0px 1px -2px #333, inset 0px -2px 1px -2px #333;
}

/* Base color backgrounds for messageboxes,
   private messages, mentions, and unread messages */

.compose_table .messagebox {
   box-shadow: none !important;
}

.messagebox {
    background-color: #ffffff;
}

.private-message .messagebox {
    background-color: #feffe0;
}

.mention .messagebox {
    background-color: #ffe4e0;
}

.messagebox .message_top_line {
    position: relative;
}

.messagebox .unread_marker {
    display: block;
    position: absolute;
    width: 10px;
    height: 10px;
    border-radius: 16px;
    background: #2b8213;
    left: -31px;
    margin-top: 6px;
    opacity: 0;
    box-shadow: inset 1px 1px 1px -1px #000;
    border: 1px solid #fff;
}

.messagebox .unread_marker.slow_fade {
    -webkit-transition: all 2.7s ease-in;
    -moz-transition: all 2.7s ease-in;
    -o-transition: all 2.7s ease-in;
    transition: all 2.7s ease-in;
}

.messagebox .unread_marker.fast_fade {
    -webkit-transition: all 0.3s ease-in;
    -moz-transition: all 0.3s ease-in;
    -o-transition: all 0.3s ease-in;
    transition: all 0.3s ease-in;
}

.include-sender .messagebox .unread_marker {
    margin-top: 8px; /* To line up with avatar */
}

.unread .unread_marker {
    opacity: 1;
}

/* Selected messages use an inset box shadow to highlight, with
   different highlight colors for selected messages, selected mentions,
   and selected private messages */

.selected_message + .message_row .messagebox {
    box-shadow: inset 0px 4px 5px -4px #3093c3, inset -2px 0px 1px -2px #333;
}

.selected_message + .message_row .messagebox_colorblock {
    box-shadow: inset 0px 4px 5px -4px #3093c3, inset 2px 0px 1px -2px #333;
}

.selected_message + .message_row.last_message .messagebox {
    box-shadow: inset 0px 4px 5px -4px #3093c3, inset -2px 0px 1px -2px #333, inset 0px -2px 1px -2px #333;
}
/* ... */

